--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -185,7 +185,7 @@
 										Nosso nome é Dave Craft.
 									</div>
 									<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
+										Fundamos nosso próprio mundo de design para expandi-lo em direção a outros planetas. Nossas rotas não são circulares, mas percorrem as melhores fontes de arte e diversidade. Nosso propósito é cobrir o universo de belas, únicas e funcionais expressões da criação chamada design. Somos a Dave Craft.
 									</div>
 								</div>
 							</div>
