--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -185,7 +185,7 @@
 										Nosso nome é Dave Craft.
 									</div>
 									<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-										Fundamos nosso próprio mundo de design para expandi-lo em direção a outros planetas. Nossas rotas não são circulares, mas percorrem as melhores fontes de arte e diversidade. Nosso propósito é cobrir o universo de belas, únicas e funcionais expressões da criação chamada design. Somos a Dave Craft.
+										Fundamos nosso próprio mundo de design para expandi-lo em direção a outros planetas. <br />Nossas rotas não são circulares, mas percorrem as melhores fontes de arte e diversidade. <br />Nosso propósito é cobrir o universo de belas, únicas e funcionais expressões da criação chamada design. <br />Somos a Dave Craft.
 									</div>
 								</div>
 							</div>
@@ -204,13 +204,10 @@
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-11">
 								<div class="desc">
 									<div class="subname splitting-text-anim-1 scroll-animate" data-splitting="words" data-animate="active">
-										Photography is the story I fail to put into words.
+										Técnica & Paixão, Estética em Ação, o Mundo em Detalhes
 									</div>
 									<div class="name splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-										I love, what <br />I do.
-									</div>
-									<div class="label splitting-text-anim-3 scroll-animate" data-splitting="chars" data-animate="active">
-										- Destin Sparks
+										Inspirados <br />para criar.
 									</div>
 								</div>
 							</div>
