--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -231,10 +231,10 @@
 							<!-- titles -->
 							<div class="m-titles">
 								<div class="m-title splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Experience
+									Experiência
 								</div>
 								<div class="m-subtitle scrolla-element-anim-1 scroll-animate" data-animate="active">
-									Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non vehicula id, pretium quis sem. Pellentesque tincidAenean sollicitudin massa eget turpis pharetra, at molestie ante dictum.
+									Temos longa e intensa experiência em design, explorando soluções inovadoras. Nosso compromisso é entregar excelência em cada projeto. Unimos criatividade e técnica para alcançar resultados impactantes. Somos apaixonados por design.
 								</div>
 							</div>
 
@@ -254,10 +254,10 @@
 											<div class="slide"><img src="images/experience-img1.jpg" class="slide-ex-item__image" alt="" /></div>
 											<div class="slide-titles">
 												<div class="titles">
-													<div class="label splitting-text-anim-1" data-splitting="chars">2015- Present</div>
-													<div class="title splitting-text-anim-2" data-splitting="chars">foto.</div>
+													<div class="label splitting-text-anim-1" data-splitting="chars">Web Design</div>
+													<div class="title splitting-text-anim-2" data-splitting="chars">eficiência</div>
 													<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-														Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+														Criamos interfaces intuitivas e eficazes para uma experiência online fluida e memorável.
 													</div>
 												</div>
 											</div>
@@ -267,10 +267,10 @@
 											<div class="slide"><img src="images/experience-img2.jpg" class="slide-ex-item__image" alt="" /></div>
 											<div class="slide-titles">
 												<div class="titles">
-													<div class="label splitting-text-anim-1" data-splitting="chars">2013- 2015</div>
-													<div class="title splitting-text-anim-2" data-splitting="chars">video.</div>
+													<div class="label splitting-text-anim-1" data-splitting="chars">Concept Design</div>
+													<div class="title splitting-text-anim-2" data-splitting="chars">inovação</div>
 													<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-														Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+														Exploramos ideias vanguardistas, moldando conceitos únicos que transcendem expectativas e inspiram originalidade.
 													</div>
 												</div>
 											</div>
@@ -280,10 +280,10 @@
 											<div class="slide"><img src="images/experience-img3.jpg" class="slide-ex-item__image" alt="" /></div>
 											<div class="slide-titles">
 												<div class="titles">
-													<div class="label splitting-text-anim-1" data-splitting="chars">2010- 2013</div>
-													<div class="title splitting-text-anim-2" data-splitting="chars">music.</div>
+													<div class="label splitting-text-anim-1" data-splitting="chars">Creative Design</div>
+													<div class="title splitting-text-anim-2" data-splitting="chars">expressividade</div>
 													<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
-														Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+														Unimos arte e funcionalidade, proporcionando designs envolventes que comunicam, inspiram e impressionam de forma duradoura.
 													</div>
 												</div>
 											</div>
