--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -146,7 +146,7 @@
 			<div class="section hero-started" data-dispimgpath="images/pointilize.jpg">
 				
 				<!-- slide -->
-				<div class="slide"><img src="images/about-bg.jpg" class="started-item__image" alt="" /></div>
+				<div class="slide"><img src="images/about-bg.gif" class="started-item__image" alt="" /></div>
 				<div class="canvas started-items__image"></div>
 
 				<div class="container">
@@ -213,7 +213,7 @@
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 ms-auto">
 								<div class="image" data-bottom-top="top: 0px;" data-top-bottom="top: -300px;">
-									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/quote-img.jpg);"></div>
+									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/portfolio.mp4);"></div>
 								</div>
 							</div>
 						</div>
