--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -213,7 +213,7 @@
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 ms-auto">
 								<div class="image" data-bottom-top="top: 0px;" data-top-bottom="top: -300px;">
-									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/quote-img.jpg);"></div>
+									<div class="img scrolla-element-anim-1 scroll-animate" data-animate="active" style="background-image: url(images/quote-img.png);"></div>
 								</div>
 							</div>
 						</div>
