--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -146,7 +146,7 @@
 			<div class="section hero-started" data-dispimgpath="images/pointilize.jpg">
 				
 				<!-- slide -->
-				<div class="slide"><img src="images/about-bg.gif" class="started-item__image" alt="" /></div>
+				<div class="slide"><img src="images/about-bg.jpg" class="started-item__image" alt="" /></div>
 				<div class="canvas started-items__image"></div>
 
 				<div class="container">
