--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -251,7 +251,7 @@
 									<div class="swiper-wrapper">
 
 										<div class="swiper-slide">
-											<div class="slide"><img src="images/experience-img1.jpg" class="slide-ex-item__image" alt="" /></div>
+											<div class="slide"><img src="images/experience-img1.png" class="slide-ex-item__image" alt="" /></div>
 											<div class="slide-titles">
 												<div class="titles">
 													<div class="label splitting-text-anim-1" data-splitting="chars">Web Design</div>
@@ -281,7 +281,7 @@
 											<div class="slide-titles">
 												<div class="titles">
 													<div class="label splitting-text-anim-1" data-splitting="chars">Creative Design</div>
-													<div class="title splitting-text-anim-2" data-splitting="chars">expressividade</div>
+													<div class="title splitting-text-anim-2" data-splitting="chars">densidade</div>
 													<div class="text scrolla-element-anim-1 scroll-animate" data-animate="active">
 														Unimos arte e funcionalidade, proporcionando designs envolventes que comunicam, inspiram e impressionam de forma duradoura.
 													</div>
