--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -251,7 +251,7 @@
 									<div class="swiper-wrapper">
 
 										<div class="swiper-slide">
-											<div class="slide"><img src="images/experience-img1.png" class="slide-ex-item__image" alt="" /></div>
+											<div class="slide"><img src="images/experience-img1.jpg" class="slide-ex-item__image" alt="" /></div>
 											<div class="slide-titles">
 												<div class="titles">
 													<div class="label splitting-text-anim-1" data-splitting="chars">Web Design</div>
